@@ -877,10 +877,10 @@
 2232,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		WL_FREEZE_SP,Freeze Spell
 
 // Ranger
-2233,9,8,1,0,0x2,5,10,3,yes,0,0,0,weapon,0,	RA_ARROWSTORM,Arrow Storm
+2233,9,8,1,-1,0x2,5,10,3,yes,0,0,0,weapon,0,	RA_ARROWSTORM,Arrow Storm
 2234,0,8,4,0,0,0,5,5,no,0,0,0,none,0,		RA_FEARBREEZE,Fear Breeze
 2235,0,0,0,0,0,0,10,0,no,0,0,0,none,0,		RA_RANGERMAIN,Ranger Main
-2236,9,8,1,0,0,0,10,1,yes,0,0,0,weapon,0,	RA_AIMEDBOLT,Aimed Bolt
+2236,9,8,1,-1,0,0,10,-1,yes,0,0,0,weapon,0,	RA_AIMEDBOLT,Aimed Bolt
 2237,6,6,2,0,0x3,3,1,1,no,0,0,0,none,0,		RA_DETONATOR,Detonator
 2238,3,6,2,0,0x3,5,5,1,no,0,0x80,3,misc,0,	RA_ELECTRICSHOCKER,Electric Shocker
 2239,3,6,2,0,0x42,7,5,1,no,0,0x80,3,misc,0,	RA_CLUSTERBOMB,Cluster Bomb
